--- a/R Independent Project Week 1.Rmd
+++ b/R Independent Project Week 1.Rmd
@@ -185,6 +185,12 @@ clean_df<-advert_df[!duplicated(advert_df),]
 ```
 
 
+### Confirming the operation
+```{r}
+clean_df[duplicated(clean_df),]
+```
+
+
 ### Checking for null values
 ```{r}
 # Length which is null
@@ -230,7 +236,7 @@ hist(clean_nums_df$Time_on_site,xlab = "Time spent on site",main="The distributi
 ```{r}
 # Distribution of area income
 hist(clean_nums_df$A_income,xlab="Area Income",main="This is the ditribution of the Area Income")
-# The Area income is skewed to the right, the tells us that the income is populated on the higher end with a low population with lower income
+# The Area income is skewed to the right, the tells us that the income is populated on the higher end with a very low population with lower income, this presented as outliers but we will not remove them as they are legitimate data points.
 ```
 ```{r}
 # Internet usage
@@ -257,10 +263,55 @@ barplot(ad_clicks_dist,main = "The Ditribution of Adclicks",xlab = "Yes and No")
 # The distribution was balanced.
 ```
 ## Bivariate and Multivariate Analysis
+
+### Looking at the relationship between two variables and their variations within the set.
+
 ```{r}
-barplot(male_dist,main = "The Ditribution of Males",xlab = "Males and Non males")
+library("Hmisc")
+correlations<-rcorr(as.matrix(clean_nums_df))
+
+correlations
+# There is a negative linear correlation between Age and Time on site. This means for any positive variation in Age there is a negative variation of 0.33 magnitude. It is true because it is rare to find people who are advanced in age spending time on the internet.This can also be reflected in internet usage negative correlation with age.
+
+# There is a positive linear relationship between Area income and time on site.
+# The P-values explain the probability if the correlation being due to chance or an equally extreeme event. We get to see the correlations that are statistically significant being (P<0.05):
+# All except Male and the other continuous variables - This is the case because male has categorical or rather discrete values thus tabulation if its correlation with a continuous variable is not statistically significant. 
+# The same sentiment would be shared by the clicked variable. The correlations shown with other variables would not be a representation of the numbers on the ground as clicked is discrete and the values are either 0 or 1. We cannot use correlation to make a conclusion about the relationship between clicked and other continous variables.
+```
+
+```{r}
+# PLotting a box plot to assess the relationship betwen Age of individuals and their click rate. 
+boxplot(Age~Clicked,data=clean_df,main = "The Ditribution of Ages and clicks",xlab = "No and Yes")
+# It is evident that individuals in between the age of approximately 35  to 45 are likely to click into the add as compared to those in their 20's to 30's and the age above 50.
 
 ```
+### Plotting relationships between clicked and income across areas.
+```{r}
+# Income area and the clicks
+boxplot(A_income~Clicked,data=clean_df,main = "The Ditribution of Area Income area and clicks",xlab = "No and Yes")
+# It is so evident that the people in areas with income between 40,000 and approximately 59,000 are more likely to click into an add as compared with individuals with areas of and income above 59,000 to approximately 70,000. some individuals with and income below 40,000 are seem NOT to click into an add. 
+```
+### Relationship between time on site and clicks
+```{r}
+# Plot to understand relationship between time on side and ad clicks
+boxplot(Time_on_site~Clicked,data=clean_df,main = "The Ditribution of Time onsite and clicks",xlab = "No and Yes")
+### This is an interesting discovery. People who spend less time on the blogging site are more likely to click into an add as compared to people who spend more time on the sight. This could be in avoidance of distraction or just by lack of interest.
+
+## A hypothesis testing on this needs to be made to ascertain the correctness on this discovery.
+## A few individuals who spend less time on the site(in units specified) do not also click into the add. It is safe to say that the target individuals are those who spend from 45 to 60 (units of time specified).
+```
+```{r}
+# Internet usage and clicks
+boxplot(Internet_Usage~Clicked,data=clean_df,main = "The Ditribution of Internet usage and clicks",xlab = "No and Yes")
+# Same as time on site, people with less internet usage are more likely to click into an add. There are however a few individuals who have a higher internet usage that still click into the add. The least likely individuals to click into an add use internet(units specified) between 200 and approximately 230.
+```
+```{r}
+
+```
+
+
+
+
 
 
 
